--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
