--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
@@ -21,6 +20,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.8"
